test/fixtures/envoy-post-min.yaml
static_resources:
  listeners:
  - name: l
    address: { socket_address: { address: 0.0.0.0, port_value: 8080 } }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: h
          route_config:
            virtual_hosts:
            - { name: v, domains: ["*"], routes: [{ match: { prefix: "/" }, direct_response: { status: 200, body: { inline_string: "ok\n" } } }] }
          http_filters:
          - name: envoy.filters.http.wasm
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              config:
                name: modsecurity_waf
                vm_config:
                  runtime: envoy.wasm.runtime.v8
                  code: { local: { filename: /etc/modsec.wasm } }
                configuration:
                  "@type": type.googleapis.com/google.protobuf.StringValue
                  value: |
                    {"directives_map":{"default":["SecRuleEngine On","SecRequestBodyAccess On"]},"default_directives":"default"}
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
admin: { address: { socket_address: { address: 127.0.0.1, port_value: 9901 } } }
